--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,10 +4,17 @@ spring:
     name: institutosemper
 
   datasource:
-    url: jdbc:mysql://localhost:3306/x031vm05_institutows
-    username: x031vm05_autoges
-    password: Auto5934
-    driver-class-name: com.mysql.cj.jdbc.Driver
+    db1:
+      jdbcUrl: jdbc:mysql://localhost:3306/x031vm05_institutows
+      username: x031vm05_autoges
+      password: Auto5934
+      driver-class-name: com.mysql.cj.jdbc.Driver
+
+    db2:
+      jdbcUrl: jdbc:mysql://localhost:3306/x031vm05_instituto
+      username: x031vm05_autoges
+      password: Auto5934
+      driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
     hibernate:
