--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>org.isemper.com</groupId>
     <artifactId>isemperws</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>instutosemper</name>
-    <description>instutosemper</description>
+    <name>isemperws</name>
+    <description>Autogestión IS - Web Services</description>
     <url/>
     <licenses>
         <license/>
@@ -76,30 +76,15 @@
             <version>8.2.0</version>
         </dependency>
 
-        <!-- Spring Security -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- JWT -->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
             <artifactId>jjwt</artifactId>
             <version>0.12.3</version>
-        </dependency>
-
-        <!-- JWT Support -->
-        <dependency>
-            <groupId>io.jsonwebtoken</groupId>
-            <artifactId>jjwt</artifactId>
-            <version>0.9.1</version>
-        </dependency>
-
-        <!-- Spring Boot Starter Security -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
         <dependency>
